--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@
 *,
 *::after,
 *::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -23,10 +22,23 @@ h1 {
   color: white;
 }
 
+@media screen and (max-width: 520px) {
+  h1 {
+    font-size: 3rem;
+  }
+}
+
 h2, .process .container__process .box__process .boxcards__process .card__process .num__process {
   font-size: 4rem;
   line-height: 3rem;
   font-family: 'Abril Fatface', cursive;
+}
+
+@media screen and (max-width: 520px) {
+  h2, .process .container__process .box__process .boxcards__process .card__process .num__process {
+    font-size: 2.5rem;
+    line-height: 2rem;
+  }
 }
 
 h3 {
@@ -72,8 +84,7 @@ strong {
 .secondaryButton {
   background-color: none;
   color: #009AD8;
-  -webkit-box-shadow: inset 0 0 0 1px #009AD8;
-          box-shadow: inset 0 0 0 1px #009AD8;
+  box-shadow: inset 0 0 0 1px #009AD8;
 }
 
 .linkbutton {
@@ -95,16 +106,9 @@ nav {
 nav .navigation {
   width: 100%;
   max-width: 1200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-flow: row nowrap;
+  justify-content: space-between;
   margin: 0 auto;
   padding: 1rem;
 }
@@ -130,7 +134,6 @@ nav #themeToggle {
 header, .container__sellarea, .services, .process, .cases, .tools, .contact {
   width: 100%;
   min-height: 80vh;
-  display: -ms-grid;
   display: grid;
   place-items: center;
   color: #d4d4d4;
@@ -140,13 +143,9 @@ header, .container__sellarea, .services, .process, .cases, .tools, .contact {
 header .container__header, .container__sellarea .container__header, .services .container__header, .process .container__header, .cases .container__header, .tools .container__header, .contact .container__header {
   width: 90%;
   max-width: 1100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 1rem;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 header .container__header .box__header, .container__sellarea .container__header .box__header, .services .container__header .box__header, .process .container__header .box__header, .cases .container__header .box__header, .tools .container__header .box__header, .contact .container__header .box__header {
@@ -183,12 +182,8 @@ header .container__header p, .container__sellarea .container__header p, .service
 .container__sellarea .box__sellarea .info__sellarea {
   width: 100%;
   color: #2c2c2f;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .container__sellarea .box__sellarea .info__sellarea p {
@@ -247,12 +242,8 @@ header .container__header p, .container__sellarea .container__header p, .service
 
 .services .container__services .box__services .boxcards__services {
   color: #2c2c2f;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .services .container__services .box__services .boxcards__services .card__services {
@@ -309,13 +300,8 @@ header .container__header p, .container__sellarea .container__header p, .service
 
 .process .container__process .box__process .boxcards__process {
   height: 460px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
   position: absolute;
   left: 0;
   width: 100vw;
@@ -332,14 +318,10 @@ header .container__header p, .container__sellarea .container__header p, .service
   width: 250px;
   height: 350px;
   padding: 1rem;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   position: relative;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr 2fr;
-      grid-template-rows: 1fr 2fr;
-  -webkit-transition: 500ms ease-in-out;
+  grid-template-rows: 1fr 2fr;
   transition: 500ms ease-in-out;
   z-index: 10;
 }
@@ -404,10 +386,8 @@ header .container__header p, .container__sellarea .container__header p, .service
 }
 
 .cases .container__cases .box__cases .boxcards__cases {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 0.5rem;
 }
 
@@ -428,8 +408,6 @@ header .container__header p, .container__sellarea .container__header p, .service
 
 .cases .container__cases .box__cases .boxcards__cases .card__cases .labelCard__cases .tags__cases {
   font-size: 0.8rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin: 0.5rem 0 0.2rem 0;
 }
@@ -478,16 +456,9 @@ header .container__header p, .container__sellarea .container__header p, .service
 .tools .container__tools .box__tools .boxcards__tools {
   width: 100%;
   height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
 .tools .container__tools .box__tools .boxcards__tools .card__tools {
@@ -495,30 +466,18 @@ header .container__header p, .container__sellarea .container__header p, .service
   width: 100px;
   background-color: #f0f0f0;
   margin: 0.25rem;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-shrink: 0;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
 }
 
 .tools .container__tools .box__tools .boxcards__tools .card__tools .img__tools {
   width: 40px;
   height: 40px;
-  -webkit-transform: translateY(0.5rem) scale(1.5);
-          transform: translateY(0.5rem) scale(1.5);
-  -webkit-transition: 0.5s cubic-bezier(0.47, -0.38, 0.2, 2);
+  transform: translateY(0.5rem) scale(1.5);
   transition: 0.5s cubic-bezier(0.47, -0.38, 0.2, 2);
 }
 
@@ -531,20 +490,16 @@ header .container__header p, .container__sellarea .container__header p, .service
   color: #009AD8;
   font-weight: 500;
   margin-top: 0.25rem;
-  -webkit-transform: translateY(40px);
-          transform: translateY(40px);
-  -webkit-transition: 0.5s cubic-bezier(0.47, -0.38, 0.52, 1.46);
+  transform: translateY(40px);
   transition: 0.5s cubic-bezier(0.47, -0.38, 0.52, 1.46);
 }
 
 .tools .container__tools .box__tools .boxcards__tools .card__tools:hover > .name__tools {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 .tools .container__tools .box__tools .boxcards__tools .card__tools:hover > .img__tools {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 .contact {
@@ -575,3 +530,4 @@ header .container__header p, .container__sellarea .container__header p, .service
   background-color: white;
   width: 350px;
 }
+/*# sourceMappingURL=style.css.map */
