--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,10 +3,9 @@
 @import 'typography.sass'
 @import 'buttons.sass'
 
-
-
 body
     background-color: $bgPriColor
+
     // background-color: #333
 
 nav
@@ -215,7 +214,7 @@ header, .container__sellarea, .services, .process, .cases, .tools, .contact
 
             .boxcards__process
                 height: 460px
-                width: 100%
+                // width: 100%
                 display: flex
                 // justify-content: center
                 align-items: flex-end
