--- a/css/buttons.css
+++ b/css/buttons.css
@@ -18,10 +18,10 @@
 .secondaryButton {
   background-color: none;
   color: #009AD8;
-  -webkit-box-shadow: inset 0 0 0 1px #009AD8;
-          box-shadow: inset 0 0 0 1px #009AD8;
+  box-shadow: inset 0 0 0 1px #009AD8;
 }
 
 .linkbutton {
   color: orange;
 }
+/*# sourceMappingURL=buttons.css.map */
