--- a/css/style2.css
+++ b/css/style2.css
@@ -2,8 +2,7 @@
 *,
 *::after,
 *::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -23,17 +22,32 @@ h1 {
   color: white;
 }
 
-h2, h3 {
-  font-weight: 700;
-  font-size: 2rem;
+h2 {
+  font-size: 4rem;
+  line-height: 3rem;
+  font-family: 'Abril Fatface', cursive;
 }
 
 h3 {
+  font-weight: 700;
   font-size: 1.5rem;
+}
+
+h4 {
+  font-weight: 500;
+  font-size: 1.2rem;
 }
 
 p {
   font-weight: 300;
+  font-size: 1rem;
+}
+
+strong {
+  font-weight: 700;
+}
+
+.handwriteMessage {
   font-size: 1rem;
 }
 
@@ -57,8 +71,7 @@ p {
 .secondaryButton {
   background-color: none;
   color: #009AD8;
-  -webkit-box-shadow: inset 0 0 0 1px #009AD8;
-          box-shadow: inset 0 0 0 1px #009AD8;
+  box-shadow: inset 0 0 0 1px #009AD8;
 }
 
 .linkbutton {
@@ -90,15 +103,9 @@ nav {
   top: 0;
   left: 0;
   padding: 0.5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   z-index: 100;
 }
 
@@ -106,8 +113,7 @@ nav {
   nav {
     max-width: 1080px;
     left: 50%;
-    -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
   }
 }
 
@@ -131,7 +137,6 @@ header {
 header .headerContainer {
   width: 100%;
   height: 100%;
-  display: -ms-grid;
   display: grid;
 }
 
@@ -180,13 +185,12 @@ footer {
   position: fixed;
   bottom: 2rem;
   left: 50%;
-  -webkit-transform: translate(50%, 0);
-          transform: translate(50%, 0);
+  transform: translate(50%, 0);
   max-width: 500px;
   padding: 2rem;
   border: solid 10px;
-  -o-border-image: repeating-linear-gradient(-45deg, yellow, yellow 20px, black 20px, black 40px) 20;
-     border-image: repeating-linear-gradient(-45deg, yellow, yellow 20px, black 20px, black 40px) 20;
+  border-image: repeating-linear-gradient(-45deg, yellow, yellow 20px, black 20px, black 40px) 20;
   background-color: black;
   color: #d4d4d4;
 }
+/*# sourceMappingURL=style2.css.map */
