--- a/sass/typography.sass
+++ b/sass/typography.sass
@@ -12,13 +12,18 @@ h1
     font-family: 'Abril Fatface', cursive
     font-size: 4rem
     color: white
+    
+    @media screen and ( max-width: $midScreen )
+        font-size: 3rem
 
 
 h2
     font-size: 4rem
     line-height: 3rem
     font-family: 'Abril Fatface', cursive
-
+    @media screen and ( max-width: $midScreen )
+        font-size: 2.5rem
+        line-height: 2rem
 
 h3
     font-weight: 700
