--- a/css/presets.css
+++ b/css/presets.css
@@ -1,10 +1,10 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   text-decoration: none;
   scroll-behavior: smooth;
 }
-/*# sourceMappingURL=presets.css.map */
