--- a/css/style2.css
+++ b/css/style2.css
@@ -2,7 +2,8 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -22,10 +23,23 @@ h1 {
   color: white;
 }
 
+@media screen and (max-width: 520px) {
+  h1 {
+    font-size: 2.6rem;
+  }
+}
+
 h2 {
   font-size: 4rem;
   line-height: 3rem;
   font-family: 'Abril Fatface', cursive;
+}
+
+@media screen and (max-width: 520px) {
+  h2 {
+    font-size: 2.5rem;
+    line-height: 2rem;
+  }
 }
 
 h3 {
@@ -71,7 +85,8 @@ strong {
 .secondaryButton {
   background-color: none;
   color: #009AD8;
-  box-shadow: inset 0 0 0 1px #009AD8;
+  -webkit-box-shadow: inset 0 0 0 1px #009AD8;
+          box-shadow: inset 0 0 0 1px #009AD8;
 }
 
 .linkbutton {
@@ -103,9 +118,15 @@ nav {
   top: 0;
   left: 0;
   padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   z-index: 100;
 }
 
@@ -113,7 +134,8 @@ nav {
   nav {
     max-width: 1080px;
     left: 50%;
-    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
   }
 }
 
@@ -137,6 +159,7 @@ header {
 header .headerContainer {
   width: 100%;
   height: 100%;
+  display: -ms-grid;
   display: grid;
 }
 
@@ -185,12 +208,13 @@ footer {
   position: fixed;
   bottom: 2rem;
   left: 50%;
-  transform: translate(50%, 0);
+  -webkit-transform: translate(50%, 0);
+          transform: translate(50%, 0);
   max-width: 500px;
   padding: 2rem;
   border: solid 10px;
-  border-image: repeating-linear-gradient(-45deg, yellow, yellow 20px, black 20px, black 40px) 20;
+  -o-border-image: repeating-linear-gradient(-45deg, yellow, yellow 20px, black 20px, black 40px) 20;
+     border-image: repeating-linear-gradient(-45deg, yellow, yellow 20px, black 20px, black 40px) 20;
   background-color: black;
   color: #d4d4d4;
 }
-/*# sourceMappingURL=style2.css.map */
