--- a/sass/style_mobile.sass
+++ b/sass/style_mobile.sass
@@ -19,6 +19,9 @@ body
         z-index: 10000
         cursor: pointer
 
+.num__process
+    @extend h2
+
 @media screen and ( max-width: $midScreen )
     nav
         background-color: rgba($bgPriColor,0.5)
@@ -47,16 +50,16 @@ body
                 z-index: 10000000
                 display: flex
                 align-items: center
-                width: 35px
+                width: 30px
 
 
                 span
                     // display: block
                     background-color: $priColor
-                    height: 3px
+                    height: 2px
                     width: 100%
                     position: relative
-                    transition: 300ms cubic-bezier(0.47,-0.38, 0.52, 1.46)
+                    transition: 500ms cubic-bezier(0.47,-0.38, 0.52, 1.46)
 
                     &::before, &::after
                         background-color: $priColor
@@ -64,7 +67,7 @@ body
                         content: ''
                         width: 100%
                         height: 100%
-                        transition: 300ms cubic-bezier(0.47,-0.38, 0.52, 1.46)
+                        transition: 200ms cubic-bezier(0.47,-0.38, 0.52, 1.46)
                         
                     &::after
                         top: 0.5rem
@@ -87,7 +90,6 @@ body
                 transform: rotate(135deg*3)
                 background-color: $fontSecColor
 
-                
                 &::before, &::after
                     background-color: $fontSecColor
                     width: 100%
@@ -95,6 +97,8 @@ body
                     top: 0
                     transform: rotate(90deg)
 
+
+    
         .menu
             position: absolute
             width: 100%
@@ -129,8 +133,9 @@ body
                     color: $priColor
 
 
+
     header
-        padding: 8rem 1rem 4rem 1rem
+        padding: 6rem 1rem 1rem 1rem
         width: 100%
         min-height: 95vh
         background-color: $bgPriColor
@@ -140,8 +145,8 @@ body
         // justify-content: center
 
         .myPic
-            margin: 0 auto
-            width: 200px
+            margin: 0 auto 2rem auto
+            width: 160px
         
         .box__header
             h1
@@ -157,7 +162,7 @@ body
         // display: grid
         // place-items: center
         width: 100%
-        padding: 4rem 0.5rem
+        padding: 4rem 1rem
 
         .title__sellarea,.title__services, .title__process, .title__cases, .title__tools, .title__contact
             -webkit-text-stroke: 1px $bgPriColor
@@ -169,11 +174,17 @@ body
         .container__sellarea
             .box__sellarea
                 .info__sellarea
+                    p
+                        width: 80%
+                        // margin: 0 auto
+
                     .image__sellarea
                         width: 90%
                         margin: 2rem auto 1rem auto
                         height: 250px
-                        background-color: grey
+                        background: url("../images/website-devices.jpg")
+                        background-origin: center center
+                        background-size: cover
                         position: relative
 
                         &::before
@@ -207,7 +218,9 @@ body
                         z-index: -1
                         
                 .boxcards__services
-                    width: 100%
+                    width: 90%
+                    max-width: 280px
+                    margin: 0 auto
                     display: flex
                     flex-flow: column nowrap
 
@@ -216,9 +229,15 @@ body
                         height: auto
                         display: flex
                         flex-flow: column nowrap
-                        border: 1px solid $priColor
-                        padding: 0.5rem
+                        // border: 1px solid $priColor
+                        padding: 1rem
                         margin: 0.5rem
+                        background-color: #eee
+                        transition: 500ms ease-in-out
+
+                        &:hover
+                            background-color: $priColor
+                            color: $fontSecColor
 
                         h3
                             margin-bottom: 0.5rem
@@ -226,8 +245,10 @@ body
                         .img__service
                             width: 60px
                             height: 60px
-                            background-color: grey
                             margin-bottom: 2rem
+                            .iconify
+                                width: 100%
+                                height: 100%
 
 
     .process
@@ -242,8 +263,10 @@ body
                     display: none    
 
                 .boxcards__process
+                    margin-left: -1rem
+                    padding: 0 1rem
                     width: 100vw
-                    height: 400px
+                    height: 380px
                     display: flex
                     flex-flow: row nowrap
                     overflow-x: scroll
@@ -254,26 +277,108 @@ body
 
                     .card__process
                         position: relative
-                        border: 1px solid $priColor
-                        margin: 1rem 0.25rem
+                        background-color: #eee
+                        margin: 1rem 0.5rem
                         width: 220px
                         height: 350px
                         flex-shrink: 0
                         padding: 0.5rem
                         display: grid
-                        grid-template-rows: 1fr 2fr
-
-                        &:last-child
-                            margin-right: 1rem
-
+                        grid-template-rows: 1fr 1fr
+                        transition: 200ms ease-in-out
 
                         .img__process
                             width: 60px
                             height: 60px
-                            background-color: grey
+                            // background-color: grey
+                            .iconify
+                                width: 100%
+                                height: 100%
+                                color: $priColor
 
                         .cardInfo__process
+                            display: flex
+                            flex-direction: column
+                            flex-shrink: 1
+                            justify-content: flex-start
+
                             .num__process
                                 position: absolute
                                 top: 0.5rem
                                 right: 0.5rem
+
+                        &::before
+                            position: absolute
+                            content: ''
+                            width: 100%
+                            height: 100%
+                            top: 0.5rem
+                            left: 0.5rem
+                            background-color: rgba($priColor, 0.4 )
+                            z-index: -1
+
+
+                        &:hover
+                            background-color: $priColor
+                            color: $fontSecColor
+                            .iconify
+                                color: $fontSecColor
+
+    .cases
+        .container__cases
+            
+            .box__cases
+                
+                .boxcards__cases
+                    
+                    .card__cases
+                        background-color: rgba($priColor, 0.4)
+                        // height: 350px
+                        margin: 1rem auto
+                        padding: 1rem
+                        position: relative
+                        margin-top: 6rem
+
+                        .img__cases
+                            width: 90%
+                            height: 250px
+                            margin: 0 auto
+                            position: absolute
+                            top: -3rem
+                            left: 50%
+                            transform: translateX(-50%)
+
+                            img
+                                width: 100%
+                                height: 100%
+                                object-position: center center
+                                object-fit: cover
+
+
+
+
+                        
+                        h3
+                            margin-top: calc(250px - 2.5rem)
+                    
+                        .tags__cases
+                            font-size: 0.8rem
+                            width: 100%
+                            display: flex
+                            flex-flow: row wrap
+                            line-height: 1rem
+                            margin: 0.5rem 0 0.3rem 0
+                                                        
+                            li
+                                background-color: rgba($bgSecColor, 0.4)
+                                padding: 0.1rem 0.3rem
+                                list-style: none
+                                margin-right: 0.2rem
+                                margin-bottom: 0.2rem
+                        
+                        .textCard__cases
+                            margin-bottom: 0.5rem
+
+
+
+
